--- a/artist/src/main/resources/application.properties
+++ b/artist/src/main/resources/application.properties
@@ -20,9 +20,9 @@ resilience4j.circuitbreaker.instances.cb1.permitted-number-of-calls-in-half-open
 resilience4j.circuitbreaker.instances.cb1.max-wait-duration-in-half-open-state=6s
 
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/artwork
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/artwork
 spring.datasource.username=root
-spring.datasource.password=rapidian
+spring.datasource.password=examly
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
